--- a/css/styles.css
+++ b/css/styles.css
@@ -97,3 +97,19 @@ h3{
     width: 150px;
     height: 25px;
 }
+
+/*Icons*/
+.icon{
+    width: 30px;
+    height: 30px;
+}
+
+.icon--white{
+    fill: var(--color-white);
+}
+
+.icon--small{
+    width: 20px;
+    height: 20px;
+}
+
