--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@ html{
 body{
     font-family: 'Open Sans', Arial, Helvetica, sans-serif;
     font-size: 1.4rem;
+    margin-left: 0;
+    margin-right: 0;
 
 }
 
@@ -162,4 +164,169 @@ h3{
 
 .info__one {
     margin-bottom: 8rem;
+}
+
+
+/*Feautures*/
+.feature {
+    text-align: center;
+    margin-bottom: 20rem;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    background: var(--color-background);
+}
+
+@media screen and (min-width:768px) {
+    .feature{
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+}
+
+.feature__image{
+    width: 70%;
+}
+
+@media screen and (min-width:768px) {
+    .feature__content {
+        text-align: left;
+        margin: 6rem;
+    }
+    
+}
+
+.feature:nth-of-type(1),
+.feature:nth-of-type(3) {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.feature:nth-of-type(1)::before {
+    content: '';
+    background: url(../images/bg-section-top-mobile-1.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: -25%;
+}
+
+@media screen and (min-width:768px) {
+    .feature:nth-of-type(1) {
+        padding-top: 4.5rem;
+    }
+
+  .feature:nth-of-type(1)::before {
+    content: '';
+    background: url(../images/bg-section-top-desktop-1.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    position: absolute;
+    top: -20%;
+    }
+}
+
+
+.feature:nth-of-type(1)::after {
+    content: '';
+    background: url(../images/bg-section-bottom-mobile-1.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: -20%;
+}
+
+@media screen and (min-width:768px) {
+    .feature:nth-of-type(1)::after {
+        content: '';
+        background: url(../images/bg-section-bottom-desktop-1.svg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        width: 100%;
+        position: absolute;
+        bottom: -80px;
+    }
+}
+
+.feature:nth-of-type(2) {
+    background: none;
+}
+
+@media screen and (min-width:768px) {
+    .feature:nth-of-type(2) .feature__content{
+        order: -1;
+    }
+}
+
+
+.feature:nth-of-type(3)::before {
+    content: '';
+    background: url(../images/bg-section-top-mobile-2.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 200px;
+    position: absolute;
+    top: -22%;
+}
+
+
+@media screen and (min-width:768px) {
+  .feature:nth-of-type(3)::before {
+    content: '';
+    background: url(../images/bg-section-top-desktop-2.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    position: absolute;
+    top: -25%;
+    }
+}
+
+.feature:nth-of-type(3)::after {
+    content: '';
+    background: url(../images/bg-section-bottom-mobile-2.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: -20%;
+}
+
+@media screen and (min-width:768px) {
+    .feature:nth-of-type(3)::after {
+        content: '';
+        background: url(../images/bg-section-bottom-desktop-2.svg);
+        background-repeat: no-repeat;
+        background-size: 100%;
+        width: 100%;
+        position: absolute;
+        bottom: -90px;
+    }
+}
+/*
+@media screen and (min-width:768px){
+    .feature {
+        align-items: center;
+    }
+
+    .feature:nth-of-type(2) .feature__content{
+        order: 2;
+    }
+
+    .feature__image{
+        width: 70%;
+    }
+    
+    .feature__content{
+        max-width: 80%;
+        text-align: left;
+        order: -1;
+    }
 }
