--- a/css/styles.css
+++ b/css/styles.css
@@ -310,23 +310,9 @@ h3{
         bottom: -90px;
     }
 }
-/*
-@media screen and (min-width:768px){
-    .feature {
-        align-items: center;
-    }
 
-    .feature:nth-of-type(2) .feature__content{
-        order: 2;
-    }
 
-    .feature__image{
-        width: 70%;
-    }
-    
-    .feature__content{
-        max-width: 80%;
-        text-align: left;
-        order: -1;
-    }
+/*Callout*/
+.callout{
+    text-align: center;
 }
